--- a/pyexcel.ipynb
+++ b/pyexcel.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "239c431f",
+   "id": "5497125e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.464486Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.463883Z",
-     "iopub.status.idle": "2022-12-02T18:22:51.475785Z",
-     "shell.execute_reply": "2022-12-02T18:22:51.474487Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.539815Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.538800Z",
+     "iopub.status.idle": "2022-12-02T18:38:59.552393Z",
+     "shell.execute_reply": "2022-12-02T18:38:59.551221Z"
     },
     "papermill": {
-     "duration": 0.021052,
-     "end_time": "2022-12-02T18:22:51.479002",
+     "duration": 0.025407,
+     "end_time": "2022-12-02T18:38:59.555378",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.457950",
+     "start_time": "2022-12-02T18:38:59.529971",
      "status": "completed"
     },
     "tags": []
@@ -32,19 +32,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a9fd8d63",
+   "id": "106f8e00",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.487662Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.486653Z",
-     "iopub.status.idle": "2022-12-02T18:22:51.579686Z",
-     "shell.execute_reply": "2022-12-02T18:22:51.578146Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.564485Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.563766Z",
+     "iopub.status.idle": "2022-12-02T18:38:59.657290Z",
+     "shell.execute_reply": "2022-12-02T18:38:59.656062Z"
     },
     "papermill": {
-     "duration": 0.100718,
-     "end_time": "2022-12-02T18:22:51.583007",
+     "duration": 0.101263,
+     "end_time": "2022-12-02T18:38:59.660144",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.482289",
+     "start_time": "2022-12-02T18:38:59.558881",
      "status": "completed"
     },
     "tags": []
@@ -58,19 +58,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "33acc361",
+   "id": "33a25c61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.590941Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.590503Z",
-     "iopub.status.idle": "2022-12-02T18:22:51.623812Z",
-     "shell.execute_reply": "2022-12-02T18:22:51.622746Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.668498Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.668098Z",
+     "iopub.status.idle": "2022-12-02T18:38:59.698406Z",
+     "shell.execute_reply": "2022-12-02T18:38:59.697240Z"
     },
     "papermill": {
-     "duration": 0.040643,
-     "end_time": "2022-12-02T18:22:51.626826",
+     "duration": 0.037894,
+     "end_time": "2022-12-02T18:38:59.701314",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.586183",
+     "start_time": "2022-12-02T18:38:59.663420",
      "status": "completed"
     },
     "tags": []
@@ -124,19 +124,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6cab317",
+   "id": "613cc4ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.635327Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.634873Z",
-     "iopub.status.idle": "2022-12-02T18:22:51.655335Z",
-     "shell.execute_reply": "2022-12-02T18:22:51.653969Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.710851Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.709480Z",
+     "iopub.status.idle": "2022-12-02T18:38:59.730173Z",
+     "shell.execute_reply": "2022-12-02T18:38:59.728588Z"
     },
     "papermill": {
-     "duration": 0.028077,
-     "end_time": "2022-12-02T18:22:51.658168",
+     "duration": 0.028539,
+     "end_time": "2022-12-02T18:38:59.733379",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.630091",
+     "start_time": "2022-12-02T18:38:59.704840",
      "status": "completed"
     },
     "tags": []
@@ -187,19 +187,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "811414ac",
+   "id": "cf0c4b0d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.667060Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.666519Z",
-     "iopub.status.idle": "2022-12-02T18:22:51.684061Z",
-     "shell.execute_reply": "2022-12-02T18:22:51.682704Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.743569Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.742356Z",
+     "iopub.status.idle": "2022-12-02T18:38:59.759246Z",
+     "shell.execute_reply": "2022-12-02T18:38:59.758052Z"
     },
     "papermill": {
-     "duration": 0.025344,
-     "end_time": "2022-12-02T18:22:51.686731",
+     "duration": 0.02471,
+     "end_time": "2022-12-02T18:38:59.761720",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.661387",
+     "start_time": "2022-12-02T18:38:59.737010",
      "status": "completed"
     },
     "tags": []
@@ -255,19 +255,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fe676dd8",
+   "id": "135df295",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-02T18:22:51.697062Z",
-     "iopub.status.busy": "2022-12-02T18:22:51.696008Z",
-     "iopub.status.idle": "2022-12-02T18:22:52.638006Z",
-     "shell.execute_reply": "2022-12-02T18:22:52.636479Z"
+     "iopub.execute_input": "2022-12-02T18:38:59.772639Z",
+     "iopub.status.busy": "2022-12-02T18:38:59.770444Z",
+     "iopub.status.idle": "2022-12-02T18:39:00.712354Z",
+     "shell.execute_reply": "2022-12-02T18:39:00.711174Z"
     },
     "papermill": {
-     "duration": 0.950704,
-     "end_time": "2022-12-02T18:22:52.641716",
+     "duration": 0.949894,
+     "end_time": "2022-12-02T18:39:00.715288",
      "exception": false,
-     "start_time": "2022-12-02T18:22:51.691012",
+     "start_time": "2022-12-02T18:38:59.765394",
      "status": "completed"
     },
     "tags": []
@@ -289,20 +289,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c2855f20",
+   "execution_count": 7,
+   "id": "4ddc69ca",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-02T18:39:00.724942Z",
+     "iopub.status.busy": "2022-12-02T18:39:00.724527Z",
+     "iopub.status.idle": "2022-12-02T18:39:00.735549Z",
+     "shell.execute_reply": "2022-12-02T18:39:00.734064Z"
+    },
     "papermill": {
-     "duration": 0.003035,
-     "end_time": "2022-12-02T18:22:52.648515",
+     "duration": 0.01885,
+     "end_time": "2022-12-02T18:39:00.738272",
      "exception": false,
-     "start_time": "2022-12-02T18:22:52.645480",
+     "start_time": "2022-12-02T18:39:00.719422",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54      0.000000\n",
+       "55      0.000000\n",
+       "56      0.000000\n",
+       "57      0.000000\n",
+       "58      0.000000\n",
+       "59      0.000000\n",
+       "60      0.000000\n",
+       "61      0.000000\n",
+       "62      0.000000\n",
+       "63      0.000000\n",
+       "64      0.000000\n",
+       "65      0.000000\n",
+       "66    709.960022\n",
+       "67      0.000000\n",
+       "Name: NEW SUM ASSURED, dtype: float32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newDf[(newDf['POLICY NO'] == 60577)]['NEW SUM ASSURED']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ce910be0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-02T18:39:00.748569Z",
+     "iopub.status.busy": "2022-12-02T18:39:00.748150Z",
+     "iopub.status.idle": "2022-12-02T18:39:01.394507Z",
+     "shell.execute_reply": "2022-12-02T18:39:01.392874Z"
+    },
+    "papermill": {
+     "duration": 0.654691,
+     "end_time": "2022-12-02T18:39:01.397268",
+     "exception": false,
+     "start_time": "2022-12-02T18:39:00.742577",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for index, row in newDf.iterrows():\n",
+    "    if(row['PAR / NON PAR'] != 'PAR'):\n",
+    "        row[\"TOTAL DECLARED BONUS\"] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2a4d0831",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-02T18:39:01.407094Z",
+     "iopub.status.busy": "2022-12-02T18:39:01.406634Z",
+     "iopub.status.idle": "2022-12-02T18:39:01.416783Z",
+     "shell.execute_reply": "2022-12-02T18:39:01.415381Z"
+    },
+    "papermill": {
+     "duration": 0.017887,
+     "end_time": "2022-12-02T18:39:01.419289",
+     "exception": false,
+     "start_time": "2022-12-02T18:39:01.401402",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newDf['TOTAL DECLARED BONUS'].isnull().sum()"
+   ]
   }
  ],
  "metadata": {
@@ -325,14 +421,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.51714,
-   "end_time": "2022-12-02T18:22:53.376945",
+   "duration": 11.839202,
+   "end_time": "2022-12-02T18:39:02.146384",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-12-02T18:22:41.859805",
+   "start_time": "2022-12-02T18:38:50.307182",
    "version": "2.3.4"
   }
  },
